Fix the apis
